# tree-sitter-haskell-literate

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: fib-bird.lhs  fib-latex.lhs  fib-markdown.lhs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
